# django-rest-api-post-files

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
django_api_files/: asgi.py  celery.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
