[tool.poetry]
name = "django-api-files-project"
version = "0.1.0"
description = ""
authors = ["arsenyvolodko <arvolodko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.3.6"
gunicorn = "^21.2.0"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.1"
poetry-dotenv = "^0.4.0"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"
django-celery-beat = "^2.5.0"
django = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
